# rust-rocks

./: .gitignore  Cargo.toml  LICENSE  README.md
02-thumbor/: abi.proto
02-thumbor/src/: main.rs
02-thumbor/src/engine/: photon.rs
02-thumbor/src/pb/: abi.rs  mod.rs
03-queryer/examples/: covid.rs
03-queryer/queryer/: Cargo.toml
03-queryer/queryer-py/: Cargo.toml
03-queryer/queryer-py/src/: lib.rs
03-queryer/queryer/examples/: dialect.rs
03-queryer/queryer/src/: dialect.rs  lib.rs
03-queryer/src/: convert.rs  dialect.rs  fetchers.rs  lib.rs  loader.rs
04-copy/: is_copy.rs  lifecycle.rs  reference.rs  value.rs  wrong.rs
05-ownership/: rc.rs  spawn_arc.rs
06-lifecycle/: lifetime_specifier  lifetime_specifier.rs
07-mem/: enum.rs  size.c  struct.rs
08-types/: Cargo.toml  generics.rs  traits.rs  writer.rs
08-types/src/: complex.rs  dyn_dispatch.rs  main.rs  parse.rs  quiz.rs  static_dispatch.rs
09-cli/: Cargo.toml
09-cli/catr/: Cargo.toml
09-cli/catr/src/: lib.rs
09-cli/catr/tests/: cli.rs
09-cli/echor/: Cargo.toml  mk-fixtures.sh
09-cli/echor/src/: main.rs
09-cli/echor/tests/: cli.rs
09-cli/headr/: Cargo.toml
09-cli/headr/src/: lib.rs
09-cli/headr/tests/: cli.rs
src/: main.rs
thumbor/: Cargo.toml
thumbor/src/: main.rs
