[package]
name = "httpie"
version = "0.1.0"
authors = ["Yan Qian <qianyan@thoughtworks.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" #错误处理
clap = {version = "3", features = ["derive"]} # 命令行解析
colored = "2" #命令行终端多彩显示
jsonxf = "1.1" # JSON pretty print
mime = "0.3" #处理 mime 类型
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]} # HTTP 客户端
tokio = { version = "1", features = ["full"]} # 异步处理
syntect = "4"